fixing DataTypeDetector in TableInfoSideBar